--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>AviUtlチュートリアル</title>
   <link rel="icon" type="image/png" href="" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
 <body>
