--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
 <body>
 <div class="header">
 </div>
+<div class="stage1" id="stage">
+  <h1>Stage 1</h1>
+  <p>文字を表示してみる。</p>
+</div>
 </body>
 </html>
