--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
 <body>
-<div class="header">
-</div>
-<div class="stage1" id="stage">
-  <h1>Stage 1</h1>
-  <p>文字を表示してみる。</p>
-</div>
+  <div class="header">
+  </div>
+  <div class="stage-container">
+    <div class="stage1" id="stage">
+      <h1>Stage 1</h1>
+      <p>文字を表示してみる。</p>
+    </div>
+  </div>
 </body>
 </html>
