--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="stage-container">
     <div class="stage1" id="stage">
       <h1>Stage 1</h1>
+      <img src="">
       <p>文字を表示してみる。</p>
     </div>
   </div>
