--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="stage-container">
     <div class="stage1" id="stage">
       <h1>Stage 1</h1>
-      <img src="">
+      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
       <p>文字を表示してみる。</p>
     </div>
   </div>
