--- a/index.html
+++ b/index.html
@@ -17,6 +17,31 @@
       <p>文字を表示してみる。</p>
       <h1>Stage 1</h1>
     </div>
+    <div class="stage2" id="stage">
+      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
+      <p>文字を表示してみる。</p>
+      <h1>Stage 2</h1>
+    </div>
+    <div class="stage3" id="stage">
+      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
+      <p>文字を表示してみる。</p>
+      <h1>Stage 3</h1>
+    </div>
+    <div class="stage4" id="stage">
+      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
+      <p>文字を表示してみる。</p>
+      <h1>Stage 4</h1>
+    </div>
+    <div class="stage5" id="stage">
+      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
+      <p>文字を表示してみる。</p>
+      <h1>Stage 5</h1>
+    </div>
+    <div class="stage6" id="stage">
+      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
+      <p>文字を表示してみる。</p>
+      <h1>Stage 6</h1>
+    </div>
   </div>
 </body>
 </html>
