--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AviUtlチュートリアル</title>
+  <title>AviUtl Tutorial</title>
   <link rel="icon" type="image/png" href="" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="header">
+    <h1>AviUtl Tutorial</h1>
   </div>
   <div class="stage-container">
     <div class="stage1" id="stage">
