--- a/stage1.html
+++ b/stage1.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AviUtl/Stage1</title>
+  <title>AviUtl / Stage1</title>
   <link rel="icon" type="image/png" href="" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -11,9 +11,9 @@
 </head>
 <body>
   <div class="header">
-    <a href="index.html"><h2>Stage一覧</h2></a>
+    <a href="index.html"><h2>＜　Stage一覧</h2></a>
   </div>
-  <div>
+  <div class="main">
   </div>
 </body>
 </html>
