--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h1>AviUtl Tutorial</h1>
   </div>
   <div class="stage-container">
-    <div class="stage1" id="stage">
+    <a href="stage1.html"><div class="stage1" id="stage">
       <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
       <p>テキスト：表示してみる。</p>
       <h1>Stage 1</h1>
-    </div>
+    </div></a>
     <div class="stage2" id="stage">
       <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
       <p>テキスト：アニメーション効果編</p>
