--- a/stage1.html
+++ b/stage1.html
@@ -14,6 +14,13 @@
     <a href="index.html"><h2>＜　Stage一覧</h2></a>
   </div>
   <div class="main">
+    <div class="content">
+      <h1>Stage1/テキスト：表示してみる</h1>
+    </div>
+    <div class="video">
+    </div>
+    <div class="links">
+    </div>
   </div>
 </body>
 </html>
