--- a/stage1.html
+++ b/stage1.html
@@ -16,6 +16,8 @@
   <div class="main">
     <div class="content">
       <h1>Stage1/テキスト：表示してみる</h1>
+      <p></p>
+      <a href="raw/main/stage1%20%E3%83%86%E3%82%AD%E3%82%B9%E3%83%88.aup"><button class="download">Download aup file</button></a>
     </div>
     <div class="video">
     </div>
