--- a/stage1.html
+++ b/stage1.html
@@ -18,8 +18,10 @@
       <h1>Stage1/テキスト：表示してみる</h1>
       <p></p>
       <a href="stage1%20%E3%83%86%E3%82%AD%E3%82%B9%E3%83%88.aup"><button class="download">Download aup file</button></a>
+      <p>概要欄みたいなものです。詳しい説明、使っているエフェクト、コツ、解説などがここに来る予定です。どれだけの分量になるかはそれぞれ変わってくると思うので、どんな文量であっても対応できるようにCSSを組まないといけないなって思ってます。大変。</p>
     </div>
     <div class="video">
+      
     </div>
     <div class="links">
     </div>
