--- a/stage1.html
+++ b/stage1.html
@@ -17,8 +17,11 @@
     <div class="content">
       <h1>Stage1/テキスト：表示してみる</h1>
       <p></p>
+      <p>概要欄みたいなものです。詳しい説明、使っているエフェクト、コツ、解説などがここに来る予定です。
+        どれだけの分量になるかはそれぞれ変わってくると思うので、どんな文量であっても対応できるようにCSSを組まないといけないなって思ってます。
+        大変。まぁ、それよりも字間とかの設定の仕方を忘れてるからそこに時間がかかりそう、結構文量稼いでるつもりでも、意外と少ないなって感じます。眠い。
+        でも明日はあんま時間なさそうだから。んー、１２時には寝よう。明日は７時に起こされるみたいだし。</p>
       <a href="stage1%20%E3%83%86%E3%82%AD%E3%82%B9%E3%83%88.aup"><button class="download">Download aup file</button></a>
-      <p>概要欄みたいなものです。詳しい説明、使っているエフェクト、コツ、解説などがここに来る予定です。どれだけの分量になるかはそれぞれ変わってくると思うので、どんな文量であっても対応できるようにCSSを組まないといけないなって思ってます。大変。</p>
     </div>
     <div class="video">
       
