--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
   <div class="stage-container">
     <a href="stage1.html"><div class="stage1" id="stage">
-      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
+      <img src="stage1.png">
       <p>テキスト：表示してみる。</p>
       <h1>Stage 1</h1>
     </div></a>
