--- a/stage1.html
+++ b/stage1.html
@@ -17,10 +17,8 @@
     <div class="content">
       <h1>Stage1/テキスト：表示してみる</h1>
       <p></p>
-      <p>概要欄みたいなものです。詳しい説明、使っているエフェクト、コツ、解説などがここに来る予定です。
-        どれだけの分量になるかはそれぞれ変わってくると思うので、どんな文量であっても対応できるようにCSSを組まないといけないなって思ってます。
-        大変。まぁ、それよりも字間とかの設定の仕方を忘れてるからそこに時間がかかりそう、結構文量稼いでるつもりでも、意外と少ないなって感じます。眠い。
-        でも明日はあんま時間なさそうだから。んー、１２時には寝よう。明日は７時に起こされるみたいだし。</p>
+      <p>テキストオブジェクトについてです。設定ダイアログの見方と設定の仕方さえ覚えておけばどうにかなります。<br>
+　カッコよく文字を登場、退場させるために使うのがTA（テキストアニメーション）です。<br>アニメーション効果から追加できます。</p>
       <a href="stage1%20%E3%83%86%E3%82%AD%E3%82%B9%E3%83%88.aup"><button class="download">Download aup file</button></a>
     </div>
     <div class="video">
@@ -28,6 +26,9 @@
     </div>
     <div class="links">
       <h2>Links</h2>
+      <a href="https://aviutl.info/zimaku-tekisuto/">字幕の入れ方について</a>
+      <a href="https://aviutl.info/seigyomozi/">制御文字について</a>
+      <a href="https://aviutl.info/samuneiru-2/">文字の装飾について</a>
     </div>
   </div>
 </body>
