--- a/stage1.html
+++ b/stage1.html
@@ -17,8 +17,8 @@
     <div class="content">
       <h1>Stage1/テキスト：表示してみる</h1>
       <p></p>
-      <p>テキストオブジェクトについてです。設定ダイアログの見方と設定の仕方さえ覚えておけばどうにかなります。<br>
-　カッコよく文字を登場、退場させるために使うのがTA（テキストアニメーション）です。<br>アニメーション効果から追加できます。</p>
+      <p>テキストオブジェクトについてです。設定ダイアログの見方と設定の仕方さえ覚えておけばどうにかなります。
+　カッコよく文字を登場、退場させるために使うのがTA（テキストアニメーション）です。アニメーション効果から追加できます。</p>
       <a href="stage1%20%E3%83%86%E3%82%AD%E3%82%B9%E3%83%88.aup"><button class="download">Download aup file</button></a>
     </div>
     <div class="video">
