--- a/index.html
+++ b/index.html
@@ -19,29 +19,44 @@
       <h1>Stage 1</h1>
     </div></a>
     <div class="stage2" id="stage">
-      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
-      <p>テキスト：アニメーション効果編</p>
+      <img src="stage2.png">
+      <p>図形表示</p>
       <h1>Stage 2</h1>
     </div>
     <div class="stage3" id="stage">
-      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
-      <p>文字を表示してみる。</p>
+      <img src="stage3.png">
+      <p>背景</p>
       <h1>Stage 3</h1>
     </div>
     <div class="stage4" id="stage">
-      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
-      <p>背景</p>
+      <img src="stage4.png">
+      <p>エフェクト基本</p>
       <h1>Stage 4</h1>
     </div>
     <div class="stage5" id="stage">
-      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
-      <p>背景：画像ループなど</p>
+      <img src="stage5.png">
+      <p>オブジェクト移動</p>
       <h1>Stage 5</h1>
     </div>
     <div class="stage6" id="stage">
-      <img src="https://3.bp.blogspot.com/-NRVq6FSkbtQ/Wbg76GcgtEI/AAAAAAAAETc/ZW2Z3bPuxpwdcUFl8aS3Q2mEPoeXImklACLcBGAs/w1200-h630-p-k-no-nu/TA%25E6%2593%258D%25E4%25BD%259CSP.gif">
-      <p>図形を表示してみる。</p>
+      <img src="stage6.png">
+      <p>カメラ制御</p>
       <h1>Stage 6</h1>
+    </div>
+    <div class="stage7" id="stage">
+      <img src="stage7.png">
+      <p>カスタムオブジェクト</p>
+      <h1>Stage 7</h1>
+    </div>
+    <div class="stage8" id="stage">
+      <img src="stage8.png">
+      <p>フレームバッファ</p>
+      <h1>Stage 8</h1>
+    </div>
+    <div class="stage9" id="stage">
+      <img src="stage9.png">
+      <p>ノイズ</p>
+      <h1>Stage 9</h1>
     </div>
   </div>
   <div class="footer">
