--- a/index.html
+++ b/index.html
@@ -15,49 +15,49 @@
   <div class="stage-container">
     <a href="stage1.html"><div class="stage1" id="stage">
       <img src="stage1.png">
-      <p>テキスト：表示してみる。</p>
+      <p>テキスト</p>
       <h1>Stage 1</h1>
     </div></a>
-    <div class="stage2" id="stage">
+    <a href="stage2.html"><div class="stage2" id="stage">
       <img src="stage2.png">
       <p>図形表示</p>
       <h1>Stage 2</h1>
-    </div>
-    <div class="stage3" id="stage">
+    </div></a>
+    <a href="stage3.html"><div class="stage3" id="stage">
       <img src="stage3.png">
       <p>背景</p>
       <h1>Stage 3</h1>
-    </div>
-    <div class="stage4" id="stage">
+    </div></a>
+    <a href="stage4.html"><div class="stage4" id="stage">
       <img src="stage4.png">
       <p>エフェクト基本</p>
       <h1>Stage 4</h1>
-    </div>
-    <div class="stage5" id="stage">
+    </div></a>
+    <a href="stage5.html"><div class="stage5" id="stage">
       <img src="stage5.png">
       <p>オブジェクト移動</p>
       <h1>Stage 5</h1>
-    </div>
-    <div class="stage6" id="stage">
+    </div></a>
+    <a href="stage6.html"><div class="stage6" id="stage">
       <img src="stage6.png">
       <p>カメラ制御</p>
       <h1>Stage 6</h1>
-    </div>
-    <div class="stage7" id="stage">
+    </div></a>
+    <a href="stage7.html"><div class="stage7" id="stage">
       <img src="stage7.png">
       <p>カスタムオブジェクト</p>
       <h1>Stage 7</h1>
-    </div>
-    <div class="stage8" id="stage">
+    </div></a>
+    <a href="stage8.html"><div class="stage8" id="stage">
       <img src="stage8.png">
       <p>フレームバッファ</p>
       <h1>Stage 8</h1>
-    </div>
-    <div class="stage9" id="stage">
+    </div></a>
+    <a href="stage9.html"><div class="stage9" id="stage">
       <img src="stage9.png">
       <p>ノイズ</p>
       <h1>Stage 9</h1>
-    </div>
+    </div></a>
   </div>
   <div class="footer">
    <h3>浜松西高等学校中等部科学部　2021~</h3>
