--- a/stage1.html
+++ b/stage1.html
@@ -20,6 +20,7 @@
       <p>テキストオブジェクトについてです。設定ダイアログの見方と設定の仕方さえ覚えておけばどうにかなります。
 　カッコよく文字を登場、退場させるために使うのがTA（テキストアニメーション）です。アニメーション効果から追加できます。</p>
       <a href="stage1%20%E3%83%86%E3%82%AD%E3%82%B9%E3%83%88.aup"><button class="download">Download stage1 テキスト.aup</button></a>
+      <a href="stage1%20%E3%83%86%E3%82%AD%E3%82%B9%E3%83%88%E3%82%A2%E3%83%8B%E3%83%A1%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3.aup">Download stage1 テキストアニメーション.aup</button></a>
     </div>
     <div class="video">
       
