--- a/stage1.html
+++ b/stage1.html
@@ -14,7 +14,7 @@
   </div>
   <div class="main">
     <div class="content">
-      <h1>Stage1/テキスト：表示してみる</h1>
+      <h1>Stage1/テキスト</h1>
       <p></p>
       <p>テキストオブジェクトについてです。設定ダイアログの見方と設定の仕方さえ覚えておけばどうにかなります。
 　カッコよく文字を登場、退場させるために使うのがTA（テキストアニメーション）です。アニメーション効果から追加できます。</p>
