--- a/stage3.html
+++ b/stage3.html
@@ -15,11 +15,10 @@
   <div class="main">
     <div class="content">
       <h1>Stage3/背景</h1>
-      <p></p>
       <p>基本、図形のみで作る背景についてです。説明動画でない限り、真っ白、真っ黒背景はなるべく避けましょう。グラデーション一つかけるだけで雰囲気が変わります。
         ネットからいい感じの画像を見つけてきてそれを背景にするのもありですが、動画技術向上においてはあまりよろしくない気もします。</p>
       <a href="stage3%20%E8%83%8C%E6%99%AF.aup"><button class="download">Download stage3 背景.aup</button></a>
-      <a href="stage3%20%E8%83%8C%E6%99%AF%E5%BF%9C%E7%94%A8.aup">Download stage3 背景応用.aup</button></a>
+      <a href="stage3%20%E8%83%8C%E6%99%AF%E5%BF%9C%E7%94%A8.aup"><button class="download">Download stage3 背景応用.aup</button></a>
     </div>
     <div class="video">
       
