--- a/stage4.html
+++ b/stage4.html
@@ -18,8 +18,9 @@
       <p>エフェクトのかけ方には、主に三つの方法がありますが「対象オブジェクトの設定ダイアログから追加する方法」が一番やりやすいです。
         設定ダイアログの右上の十字ボタンから追加してください。特に、アニメーション効果をマスターすると動画編集技術が格段に上がります。
         いろいろなサイトで使い方が紹介されてるので参考にしてみてください。</p>
-      <a href="stage3%20%E8%83%8C%E6%99%AF.aup"><button class="download">Download stage3 背景.aup</button></a>
-      <a href="stage3%20%E8%83%8C%E6%99%AF%E5%BF%9C%E7%94%A8.aup"><button class="download">Download stage3 背景応用.aup</button></a>
+      <a href="stage4%20%E3%82%A8%E3%83%95%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E3%81%8B%E3%81%91%E6%96%B9(%E8%A8%AD%E5%AE%9A%E3%83%80%E3%82%A4%E3%82%A2%E3%83%AD%E3%82%B0%E3%81%8B%E3%82%89).aup"><button class="download">Download stage4 エフェクトのかけ方(設定ダイアログから).aup</button></a>
+      <a href="stage4%20%E3%82%A8%E3%83%95%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E3%81%8B%E3%81%91%E6%96%B9(%E3%83%95%E3%82%A3%E3%83%AB%E3%82%BF%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E8%BF%BD%E5%8A%A0%E3%81%8B%E3%82%89).aup"><button class="download">Download stage4 エフェクトのかけ方(フィルタオブジェクトの追加から).aup</button></a>
+      <a href="stage4%20%E3%82%A8%E3%83%95%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E3%81%8B%E3%81%91%E6%96%B9(%E3%83%A1%E3%83%87%E3%82%A3%E3%82%A2%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E8%BF%BD%E5%8A%A0%E3%81%8B%E3%82%89)%20.aup"><button class="download">Download stage4 エフェクトのかけ方(メディアオブジェクトの追加から) .aup</button></a>
     </div>
     <div class="video">
       
