--- a/stage4.html
+++ b/stage4.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="stage.css">
 </head>
 <body>
-  <div class="header"
+  <div class="header">
     <a href="index.html"><h2>＜　Stage一覧</h2></a>
   </div>
   <div class="main">
