--- a/stage5.html
+++ b/stage5.html
@@ -16,8 +16,11 @@
     <div class="content">
       <h1>Stage5/オブジェクト移動</h1>
       <p>移動系については、感覚でつかみましょう。</p>
-      <a href="stage3%20%E8%83%8C%E6%99%AF.aup"><button class="download">Download stage3 背景.aup</button></a>
-      <a href="stage3%20%E8%83%8C%E6%99%AF%E5%BF%9C%E7%94%A8.aup"><button class="download">Download stage3 背景応用.aup</button></a>
+      <a href="stage5%20%E2%91%A0%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E7%A7%BB%E5%8B%95%EF%BC%88%E5%9F%BA%E6%9C%AC%EF%BC%89.aup"><button class="download">Download stage5 ①オブジェクト移動（基本）.aup</button></a>
+      <a href="stage5%20%E2%91%A1%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E7%A7%BB%E5%8B%95%EF%BC%88%E3%82%A4%E3%83%BC%E3%82%B8%E3%83%B3%E3%82%B0%EF%BC%89.aup"><button class="download">Download stage5 ②オブジェクト移動（イージング）.aup</button></a>
+      <a href="stage5%20%E2%91%A2%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E7%A7%BB%E5%8B%95%EF%BC%88%E3%82%A4%E3%83%BC%E3%82%B8%E3%83%B3%E3%82%B0%E4%BB%A5%E5%A4%96%EF%BC%89.aup"><button class="download">Download stage5 ③オブジェクト移動（イージング以外）.aup</button></a>
+      <a href="stage5%20%E3%82%B0%E3%83%AB%E3%83%BC%E3%83%97%E5%88%B6%E5%BE%A1.aup"><button class="download">Download stage5 グループ制御.aup</button></a>
+      <a href="stage5%20%E4%B8%AD%E9%96%93%E7%82%B9.aup"><button class="download">Download stage5 中間点.aup</button></a>
     </div>
     <div class="video">
       
