--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
       <p>ノイズ</p>
       <h1>Stage 9</h1>
     </div></a>
+    <a href="stage10.html"><div class="stage10" id="stage">
+      <img src="stage10.png">
+      <p>扇クリッピング</p>
+      <h1>Stage 10</h1>
+    </div></a>
   </div>
   <div class="footer">
    <h3>浜松西高等学校中等部科学部　2021~</h3>
