--- a/stage10.html
+++ b/stage10.html
@@ -16,7 +16,7 @@
   <div class="main">
     <div class="content">
       <h1>Stage10/扇クリッピング</h1>
-      <p>フレームバッファより上のレイヤーに配置したオブジェクトを1つのオブジェクトとして表示する事ができます。存在だけ知っておけばどうにかなるでしょう。</p>
+      <p>円をたくさん重ねていい感じのデザインを作れます。一つひとつの扇の大きさ、色、動きなど、すべてセンスに任して作ってみましょう。でもまずは、扇クリッピングを使って作った画像の例を写して作るところから始めると分かりやすいと思います。</p>
       <a href="stage10%20%E6%89%87%E3%82%AF%E3%83%AA%E3%83%83%E3%83%94%E3%83%B3%E3%82%B0.aup"><button class="download">Download stage10 扇クリッピング.aup</button></a>
     </div>
     <div class="video">
@@ -24,7 +24,7 @@
     </div>
     <div class="links">
       <h2>Links</h2>
-      <a href="https://seguimiii.com/basic/framebuffer">フレームバッファの使い方</a>
+      <a href="https://seguimiii.com/aviutl-tech/ougiclipping">扇クリッピング（R)の使い方</a>
     </div>
   </div>
 </body>
