--- a/stage2.html
+++ b/stage2.html
@@ -25,6 +25,7 @@
     <div class="links">
       <h2>Links</h2>
       <a href="https://aviutl-douga.com/zukei/">図形表示のわかりやすい説明</a>
+      <a href="https://drive.google.com/file/d/1uJiUXN0k2xFdPzjZOkpovPb3HMmsxIkQ/view?usp=sharing">【AviUtl】あるあるな図形で動画レベルUP!!   ゆっくり映像学区.mp4</a>
     </div>
   </div>
 </body>
