--- a/stage5.html
+++ b/stage5.html
@@ -29,6 +29,7 @@
       <h2>Links</h2>
       <a href="https://aviutl.info/idou/">移動について</a>
       <a href="https://sosakubiyori.com/aviutl-easing/">イージングについて</a>
+      <a href="https://drive.google.com/file/d/1XCq9vtXVdU2hHVg7-VgNRVT6_FyDCyUO/view?usp=sharing">【Aviutlイージング】応用(初心者向け)　イージング覚えたてでもできる！　※一時停止必須.mp4</a>
     </div>
   </div>
 </body>
