--- a/stage6.html
+++ b/stage6.html
@@ -26,6 +26,8 @@
       <a href="https://aviutl.info/kameraseigyo-tukaikata/">カメラ制御の使い方</a>
       <a href="https://seguimiii.com/aviutl-tech/autotarget">オートターゲットについて</a>
       <a href="https://seguimiii.com/aviutl-tech/parallelcamera">パラレルカメラについて</a>
+      <a href="https://drive.google.com/file/d/1bc9gP37be7k7MXPh4FyvWmjGNk9gPNk-/view?usp=sharing">【AviUtl】初級：カメラ制御とカメラワーク～前編 5分ぐらい講座拡大版 1 4.mp4</a>
+      <a href="https://drive.google.com/file/d/1kVXRfYn_MxXJa37g8Rv3pByOe1rzdQGv/view?usp=sharing">Aviutlのカメラ制御.mp4</a>
     </div>
   </div>
 </body>
