--- a/stage8.html
+++ b/stage8.html
@@ -24,6 +24,7 @@
     <div class="links">
       <h2>Links</h2>
       <a href="https://seguimiii.com/basic/framebuffer">フレームバッファの使い方</a>
+      <a href="https://drive.google.com/file/d/15DeCLlsHNP5UoIBGdfqyHMbeEKF2cKYA/view?usp=sharing">【AviUtl】#5 いろんなシーンで使える！フレームバッファとは？.mp4</a>
     </div>
   </div>
 </body>
