--- a/stage9.html
+++ b/stage9.html
@@ -25,6 +25,7 @@
       <h2>Links</h2>
       <a href="https://aviutl.info/noizuefekuto/">ノイズエフェクトの使い方</a>
       <a href="https://seguimiii.com/aviutl-tech/noisemonitor">モニター風の演出</a>
+      <a href="https://drive.google.com/file/d/1VrhBG-iZinch9BRlURwa9i49hSxVXtOs/view?usp=sharing">【AviUtl講座】ノイズの使い方.mp4</a>
     </div>
   </div>
 </body>
