--- a/stage10.html
+++ b/stage10.html
@@ -25,6 +25,7 @@
     <div class="links">
       <h2>Links</h2>
       <a href="https://seguimiii.com/aviutl-tech/ougiclipping">扇クリッピング（R)の使い方</a>
+      <a href="https://drive.google.com/file/d/1mcvl7TK6pSYNzhcCSM354gXtRdYO52yZ/view?usp=sharing">【AviUtl】扇クリッピングと円形配置を使ったタイマーの作り方【exo配布有り】.mp4</a>
     </div>
   </div>
 </body>
